# Quartz

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
quartz/: CMakeLists.txt
quartz/res/shaders/: blank.vert
quartz/res/shaders/compiled/: blank.vert.spv
quartz/src/: quartz.h
quartz/src/platform/mswindows/: win32_window.cpp  win32_window.h
quartz/src/quartz/: application.cpp  application.h  core.h  defines.h  logger.cpp  logger.h  quartz.cpp  window.h
quartz/src/quartz/containers/: stepvector.h
quartz/src/quartz/ecs/: ecs.cpp  ecs.h
quartz/src/quartz/events/: event.h  event_all.h  event_input.h  event_keyboard.h  event_mouse.h  event_window.h
quartz/src/quartz/layers/: layer.h  layer_stack.cpp
quartz/src/quartz/logging/: logger.cpp
quartz/src/quartz/platform/: defines.h  platform.h
quartz/src/quartz/platform/filesystem/: filesystem.h  filesystem_windows.cpp
quartz/src/quartz/platform/input/: input.cpp  input.h
quartz/src/quartz/platform/window/: window.h  window_win32.cpp  window_windows.cpp
quartz/src/quartz/render/: camera.h  defines.h  render.cpp  render.h
quartz/src/quartz/rendering/: defines.h  material.cpp  material.h  mesh.h  rendering.cpp  rendering.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
src/: quartz.h
src/quartz/: defines.h  quartz.cpp
src/quartz/core/: application.h  core.cpp  core.h  ecs.cpp  ecs.h  init.cpp  mainloop.cpp  shutdown.cpp
src/quartz/events/: event.h  event_input.h  event_window.h
src/quartz/layers/: layer.h  layer_stack.h
src/quartz/logging/: logger.cpp  logger.h
src/quartz/platform/: defines.h
src/quartz/platform/input/: input.h  keys.h
src/quartz/platform/window/: window.h  window.inl  window_win32.cpp  window_win32.inl
src/quartz/rendering/: buffer.cpp  buffer.h  defines.h  image.h  material.cpp  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  rendering.cpp  rendering.h  texture.cpp  texture.h  texture_skybox.cpp  texture_skybox_shaders.inl
